# denizay.github.io

./: .gitignore  README.md
docs/: index.html  sitemap.xml  style.css
docs/assets/css/: style.css
docs/assets/js/: chess-ui.js  chess-worker.js  go-logic.js  go-ui.js
docs/assets/models/: baduk_model_latest_features_web_clean_quint8.onnx
docs/blog/: baduk.html  chess.html  fib-post.html
docs/pkg/: package.json  rust_engine.d.ts  rust_engine.js  rust_engine_bg.wasm  rust_engine_bg.wasm.d.ts
rust-engine/: Cargo.toml
rust-engine/src/: lib.rs  main.rs
rust-engine/src/chess/: engine.rs  mod.rs  pieces.rs
