[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

# 1. LIBRARY CONFIGURATION
# "cdylib" = Compiles to .wasm for the browser
# "rlib"   = Compiles to a standard Rust library so main.rs can use it
[lib]
crate-type = ["cdylib", "rlib"]

# 2. BINARY CONFIGURATION (The CLI)
[[bin]]
name = "chess_cli"
path = "src/main.rs"

# 3. SHARED DEPENDENCIES (Used by both)
[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"

# 4. CONDITIONAL DEPENDENCIES (The Magic Fix)

# TARGET: WEB (WASM)
# When compiling for the browser, enable "wasm_js" so Rust asks JS for random numbers.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# TARGET: NATIVE (CLI)
# When compiling for Mac/Windows, use standard getrandom (uses OS kernel).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.3"